탭 레이아웃 중

--- a/Application/app/src/main/res/layout/activity_login.xml
+++ b/Application/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    tools:context=".LoginActivity">
+    tools:context=".Activity.LoginActivity">
 
     <Space
         android:layout_width="match_parent"
