--- a/Application/app/src/main/res/layout/activity_channel_list.xml
+++ b/Application/app/src/main/res/layout/activity_channel_list.xml
@@ -19,11 +19,11 @@
             android:id="@+id/LinearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="8"
+            android:layout_weight="7.5"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/image_channel_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -37,34 +37,25 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button_add"
+                    android:id="@+id/btn_add"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="MakeChannel"
-                    android:text="채널생성" />
+                    android:background="@drawable/chatting"
+                    android:onClick="MakeChannel" /><![CDATA[
+
+                >>>>>>> yeeun
+
+                ]]>
 
                 <Button
-                    android:id="@+id/btn_search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="검색" /><Button
-                    android:id="@+id/button_search"
+                    android:id="@+id/btn_setting"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    tools:background="@drawable/search"
-                    android:padding="10dp"/>
->>>>>>> yeeun
-
-                <Button
-                    android:id="@+id/button_setting"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    tools:background="@drawable/setting"
-                    android:padding="10dp"/>
+                    android:background="@drawable/setting"
+                    android:padding="10dp"
+                    tools:background="@drawable/setting" />
             </LinearLayout>
 
         </LinearLayout>
@@ -72,7 +63,33 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="7.5"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/edit_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:ems="10"
+                android:hint="검색어를 입력하세요"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/btn_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="8"
+                android:background="@drawable/search"
+                android:padding="10dp"
+                tools:background="@drawable/search" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
             android:orientation="vertical">
 
             <ListView
