--- a/Application/app/src/main/res/layout/activity_channel_list.xml
+++ b/Application/app/src/main/res/layout/activity_channel_list.xml
@@ -54,6 +54,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@drawable/setting"
+                    android:onClick="Setting"
                     android:padding="10dp"
                     tools:background="@drawable/setting" />
             </LinearLayout>
