--- a/Application/app/src/main/res/layout/activity_join.xml
+++ b/Application/app/src/main/res/layout/activity_join.xml
@@ -34,39 +34,11 @@
             android:layout_weight="0.5" />
 
         <EditText
-            android:id="@+id/edit__name"
+            android:id="@+id/edit__id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="@drawable/join_name"
-            android:ems="10"
-            android:inputType="textPersonName" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5" />
-
-        <EditText
-            android:id="@+id/edit_phon_num"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:background="@drawable/join_phone_number"
-            android:ems="10"
-            android:inputType="textPersonName" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5" />
-
-        <EditText
-            android:id="@+id/edit_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:background="@drawable/id"
             android:ems="10"
             android:inputType="textPersonName" />
 
