--- a/Application/app/src/main/res/layout/activity_make_channel.xml
+++ b/Application/app/src/main/res/layout/activity_make_channel.xml
@@ -69,15 +69,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:gravity="center">
 
-                <Button
-                    android:id="@+id/btn_create"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@drawable/start"
-                    android:onClick="MakeChannel"/>
+            <Button
+                android:id="@+id/btn_create"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/start"
+                android:onClick="MakeChannel"/>
+
+            <Button
+                android:id="@+id/btn_cancle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/start"
+                android:onClick="MakeCancel" />
         </LinearLayout>
 
 </LinearLayout>
