--- a/Application/app/src/main/res/layout/activity_waiting.xml
+++ b/Application/app/src/main/res/layout/activity_waiting.xml
@@ -8,6 +8,23 @@
     android:orientation="vertical"
     android:background="@color/background">
 
+    <Button
+        android:id="@+id/btn_people_wating"
+        android:layout_width="58dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="1dp"
+        android:background="@drawable/user"
+        android:onClick="checkPeople_wait"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.962"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.028" />
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
