--- a/Application/app/src/main/res/layout/activity_conference.xml
+++ b/Application/app/src/main/res/layout/activity_conference.xml
@@ -71,7 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="발언권" />
+                android:text="발언권"
+                android:onClick="onClick"/>
 
             <ImageButton
                 android:id="@+id/btn_stop"
