방장 및 요약 중

--- a/Application/app/src/main/res/layout/activity_login.xml
+++ b/Application/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
             android:layout_height="wrap_content"
 
             android:layout_gravity="center"
-            android:background="@drawable/login"
+            android:background="@drawable/start"
             android:onClick="LoginClick" />
     </LinearLayout>
 
