--- a/Application/app/src/main/res/layout/activity_conference.xml
+++ b/Application/app/src/main/res/layout/activity_conference.xml
@@ -79,9 +79,10 @@
                 android:id="@+id/btn_stop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:background="@drawable/stop"
-                android:onClick="stopConference" />
+                android:layout_weight="3"
+                android:onClick="StopCon"
+                android:text="Button" />
+
         </LinearLayout>
 </LinearLayout>
 
