--- a/Application/app/src/main/res/layout/activity_make_channel.xml
+++ b/Application/app/src/main/res/layout/activity_make_channel.xml
@@ -63,20 +63,20 @@
             android:gravity="center">
 
             <Button
-                android:id="@+id/btn_create"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/start"
-                android:onClick="MakeChannel"/>
-
-            <Button
                 android:id="@+id/btn_cancle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/start"
+                android:background="@drawable/cancel"
                 android:onClick="MakeCancel" />
+
+            <Button
+                android:id="@+id/btn_create"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/ok"
+                android:onClick="MakeChannel" />
         </LinearLayout>
 
 </LinearLayout>
