--- a/Application/app/src/main/res/layout/activity_login.xml
+++ b/Application/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    tools:context=".LoginActivity">
+   >
 
     <Space
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="@drawable/id"
-
+            android:paddingLeft="70dp"
             android:ems="10"
             android:inputType="textPersonName" />
 
@@ -56,7 +56,8 @@
             android:layout_weight="0.5"
             android:background="@drawable/pw"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:paddingLeft="70dp"
+            android:inputType="numberPassword" />
 
         <Space
             android:layout_width="match_parent"
