--- a/Application/app/src/main/res/layout/activity_login.xml
+++ b/Application/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,7 @@
     android:background="@color/background"
     android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    tools:context=".LoginActivity">
+    android:paddingRight="10dp">
 
     <Space
         android:layout_width="match_parent"
@@ -40,9 +39,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="@drawable/id"
-
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:gravity="right|center_vertical"
+            android:paddingLeft="5dp" />
 
         <Space
             android:layout_width="match_parent"
@@ -56,7 +56,8 @@
             android:layout_weight="0.5"
             android:background="@drawable/pw"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:gravity="right|center_vertical"
+            android:inputType="textPassword" />
 
         <Space
             android:layout_width="match_parent"
