--- a/Application/app/src/main/res/layout/activity_conference.xml
+++ b/Application/app/src/main/res/layout/activity_conference.xml
@@ -58,7 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:stackFromBottom="true"/>
+            android:stackFromBottom="true"
+            android:transcriptMode="alwaysScroll"/>
 
         <LinearLayout
             android:layout_width="match_parent"
