--- a/Application/app/src/main/res/layout/popup_password.xml
+++ b/Application/app/src/main/res/layout/popup_password.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요."
-        android:inputType="textPersonName"
+        android:inputType="numberPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="68dp" />
