--- a/Application/app/src/main/res/layout/activity_login.xml
+++ b/Application/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
             android:layout_height="wrap_content"
 
             android:layout_gravity="center"
-            android:background="@drawable/start"
+            android:background="@drawable/start_x"
             android:onClick="LoginClick" />
     </LinearLayout>
 
