--- a/Application/app/src/main/res/layout/popup_setting.xml
+++ b/Application/app/src/main/res/layout/popup_setting.xml
@@ -5,7 +5,9 @@
     android:id="@+id/Constraint"
     android:layout_width="400dp"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    >
+
 
     <TextView
         android:id="@+id/textView"
@@ -19,7 +21,8 @@
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/textView2"
@@ -34,7 +37,8 @@
         app:layout_constraintBottom_toTopOf="@+id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        />
 
     <RadioGroup
         android:id="@+id/radioGroup"
@@ -46,8 +50,7 @@
         app:layout_constraintBottom_toTopOf="@+id/edit_set"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <RadioButton
             android:id="@+id/radio_per"
@@ -92,8 +95,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/ok"
         android:onClick="OK"
-        android:text="확인"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
