--- a/Application/app/src/main/res/layout/activity_channel_list.xml
+++ b/Application/app/src/main/res/layout/activity_channel_list.xml
@@ -26,6 +26,8 @@
                 android:id="@+id/image_channel_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="7dp"
                 android:layout_weight="1"
                 android:background="@drawable/last_meeting" />
 
@@ -40,8 +42,9 @@
                     android:id="@+id/btn_add"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/chatting"
+                    android:background="@drawable/chatting_x"
                     android:onClick="MakeChannel" /><![CDATA[
 
                 >>>>>>> yeeun
@@ -52,10 +55,10 @@
                     android:id="@+id/btn_setting"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/setting"
+                    android:background="@drawable/setting_x"
                     android:onClick="Setting"
-                    android:padding="10dp"
                     tools:background="@drawable/setting" />
             </LinearLayout>
 
@@ -70,7 +73,8 @@
             <EditText
                 android:id="@+id/edit_search"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
                 android:layout_weight="2"
                 android:ems="10"
                 android:hint="검색어를 입력하세요"
@@ -86,19 +90,19 @@
                     android:id="@+id/btn_search"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="5dp"
                     android:layout_weight="8"
-                    android:background="@drawable/search"
+                    android:background="@drawable/search_x"
                     android:onClick="search"
-                    android:padding="10dp"
                     tools:background="@drawable/search" />
 
                 <CheckBox
                     android:id="@+id/check_pre"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:text="Before"
-                    android:textSize="11dp"/>
+                    android:textSize="11dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -112,7 +116,9 @@
             <ListView
                 android:id="@+id/List"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
         </LinearLayout>
 
     </LinearLayout>
