--- a/Application/app/src/main/res/layout/activity_join.xml
+++ b/Application/app/src/main/res/layout/activity_join.xml
@@ -87,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/start" />
+            android:background="@drawable/start_x" />
     </LinearLayout>
 
 </LinearLayout>
