ok, cancel image add

--- a/Application/app/src/main/res/layout/popup_password.xml
+++ b/Application/app/src/main/res/layout/popup_password.xml
@@ -12,8 +12,10 @@
         android:id="@+id/edit_pw_room"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="2dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요."
         android:inputType="numberPassword"
@@ -30,17 +32,25 @@
             android:id="@+id/brn_room_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="7dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="3dp"
             android:layout_weight="1"
-            android:onClick="btn_room_cancel"
-            android:text="취소" />
+            android:background="@drawable/cancel_x"
+            android:onClick="btn_room_cancel" />
 
         <Button
             android:id="@+id/btn_room_check"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="7dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="3dp"
             android:layout_weight="1"
-            android:onClick="btn_room_check"
-            android:text="확인" />
+            android:background="@drawable/ok_x"
+            android:onClick="btn_room_check" />
 
     </LinearLayout>
 
