--- a/Application/app/src/main/res/layout/activity_make_channel.xml
+++ b/Application/app/src/main/res/layout/activity_make_channel.xml
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginRight="15dp"
-                android:background="@drawable/cancel"
+                android:background="@drawable/cancel_x"
                 android:onClick="MakeCancel" />
 
             <Button
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/ok"
+                android:background="@drawable/ok_x"
                 android:onClick="MakeChannel" />
         </LinearLayout>
 
