--- a/Application/app/src/main/res/layout/popup_setting.xml
+++ b/Application/app/src/main/res/layout/popup_setting.xml
@@ -95,7 +95,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/ok"
+        android:background="@drawable/ok_x"
         android:onClick="OK"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
