--- a/Application/app/src/main/res/layout/tab_summary_item.xml
+++ b/Application/app/src/main/res/layout/tab_summary_item.xml
@@ -17,5 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:textSize="8pt"
+        android:textColor="@android:color/black"/>
 </android.support.constraint.ConstraintLayout>
