--- a/Application/app/src/main/res/layout/activity_channel_list.xml
+++ b/Application/app/src/main/res/layout/activity_channel_list.xml
@@ -27,9 +27,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="7dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/last_meeting" />
+                android:background="@drawable/channel_list" />
 
             <LinearLayout
                 android:layout_width="match_parent"
